--- a/Views/Staff/TicketManagerEdit.cshtml
+++ b/Views/Staff/TicketManagerEdit.cshtml
@@ -139,6 +139,6 @@
 
 <script>
     function confirmCompletion() {
-        return confirm("คุณแน่ใจหรือไม่ว่าต้องการเปลี่ยนสถานะเป็น 'ดำเนินการเสร็จสิ้น'?\nโปรดทราบว่าหากออกจากหน้านี้ในขณะที่สถานะตั๋วคือ 'ดำเนินการเสร็จสิ้น' \nตั๋วจะถูกย้ายไปในรายการที่เรียบร้อยแล้ว\nและการกระทำนี้ไม่สามารถย้อนกลับได้");
+        return confirm("คุณแน่ใจหรือไม่ว่าต้องการเปลี่ยนสถานะเป็น 'ดำเนินการเสร็จสิ้น'?\nโปรดทราบว่าการกระทำนี้จะทำให้ตั๋วถูกย้ายไปที่หน้า\n  'รายการที่ดำเนินการเรียบร้อยแล้ว'\nและการกระทำนี้ไม่สามารถย้อนกลับได้");
     }
 </script>
