๊Visual and Botton Update for Front/BackEnd

--- a/Views/Home/Repair.cshtml
+++ b/Views/Home/Repair.cshtml
@@ -31,10 +31,10 @@
                     <label asp-for="TypeOfProblem" class="form-label">ประเภทของปัญหา</label>
                     <select asp-for="TypeOfProblem" class="form-control" required>
                         <option value="" disabled selected>กรุณาเลือกประเภทของปัญหา</option>
-                        <option value="hardware">ปัญหาเกี่ยวกับฮาร์ดแวร์/อุปกรณ์</option>
-                        <option value="software">ปัญหาเกี่ยวกับซอฟต์แวร์</option>
-                        <option value="network">ปัญหาด้านเครือข่าย</option>
-                        <option value="other">อื่นๆ</option>
+                        <option value="ปัญหาเกี่ยวกับฮาร์ดแวร์/อุปกรณ์">ปัญหาเกี่ยวกับฮาร์ดแวร์/อุปกรณ์</option>
+                        <option value="ปัญหาเกี่ยวกับซอฟต์แวร์">ปัญหาเกี่ยวกับซอฟต์แวร์</option>
+                        <option value="ปัญหาด้านเครือข่าย">ปัญหาด้านเครือข่าย</option>
+                        <option value="อื่นๆ">อื่นๆ</option>
                     </select>
                 </div>
             </div>
