--- a/Views/Staff/AdminAccountEdit.cshtml
+++ b/Views/Staff/AdminAccountEdit.cshtml
@@ -79,7 +79,7 @@
             </div>
             <div class="mb-3">
                 <label for="username" class="form-label">ชื่อบัญชี</label>
-                <input type="text" class="form-control" id="username" name="Username" value="@Model.Username">
+                <input type="text" class="form-control" id="username" name="Username" value="@Model.Username" disabled>
             </div>
             <div class="d-flex justify-content-end gap-2 mt-3">
                 <button type="submit" class="btn btn-green">บันทึกการแก้ไข</button>
